unpackaged/main/default/objects/Document_Link__c/Document_Link__c.object-meta.xml
<CustomObject>
    <label>Document Link</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>