unpackaged/main/default/objects/Document_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Links</relationshipLabel>
    <relationshipName>Document_Links</relationshipName>
    <type>Lookup</type>
</CustomField>