unpackaged/main/default/objects/Document_Link__c/fields/Document_Notes__c.field-meta.xml
<CustomField>
    <fullName>Document_Notes__c</fullName>
    <label>Document Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>