unpackaged/main/default/objects/Document_Link__c/fields/MSA_Contract__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Contract</label>
    <referenceTo>MSA_Contract__c</referenceTo>
    <relationshipLabel>Document Links</relationshipLabel>
    <relationshipName>Document_Links</relationshipName>
    <type>Lookup</type>
</CustomField>