unpackaged/main/default/objects/Document_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Document Links</relationshipLabel>
    <relationshipName>Document_Links</relationshipName>
    <type>Lookup</type>
</CustomField>