unpackaged/main/default/objects/Document_Link__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>RFP/RFI</fullName>
            </value>
            <value>
                <fullName>RFP Response</fullName>
            </value>
            <value>
                <fullName>Order Form</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>